# Portfolio

./: .gitignore
university-recruitment-info-collector/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
university-recruitment-info-collector/config/: sources.toml
university-recruitment-info-collector/docs/: engineering-refactor.md  optimization-plan.md  optimization-tasks.md  security-and-hotfix.md  todo-remaining.md
university-recruitment-info-collector/docs/product/: requirements.md
university-recruitment-info-collector/docs/sources/: aggregators.md  guangzhou_universities.md  university_talent_sites.md
university-recruitment-info-collector/frontend/: index.html  package-lock.json  package.json  vite.config.js
university-recruitment-info-collector/frontend/src/: App.vue  style.css
university-recruitment-info-collector/frontend/src/api/: index.js
university-recruitment-info-collector/frontend/src/router/: index.js
university-recruitment-info-collector/scripts/: analyze_export_quality.py
university-recruitment-info-collector/src/university_recruitment/: __init__.py  collect.py  config.py  enrich.py  models.py  report.py  reprocess.py  school_metadata.py  seed.py  source_config.py  storage.py  url_utils.py
university-recruitment-info-collector/tests/: conftest.py  test_api.py  test_attachment_parser.py  test_browser_adapters.py  test_collect.py  test_detail_parser.py  test_field_extractor.py  test_llm_validation.py  test_models.py  test_report.py  test_rule_matcher.py  test_source_config.py  test_storage.py
(+503 files in other folders)
